# Deep-Research-Assistant

./: Dockerfile  README.md  app.py  docker-compose.yml  example.env  main.py  pyproject.toml
src/: config.py  deep_research.py  instructions.py  planner_agent.py  search_agent.py  write_agent.py
