[project]
name = "deep-research-assistant"
version = "0.0.0"
description = "An AI-powered deep research assistant that gathers, analyzes, and summarizes information from multiple sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.3.0",
    "openai>=2.15.0",
    "openai-agents>=0.6.8",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5"
]
